@@ -7,6 +7,10 @@ NEW FEATURES
     
     o Fix bugs in the function 'xGRviaGenomicAnno' (disabling OR calculation)
     
+    o Add function 'xEnrichHeatmap' for visualising enrichment results in a heatmap
+    
+    o Add function 'xGRoverlap' enabling extraction of genomic scores
+    
 
 CHANGES IN VERSION 1.1.2
 -----------------------
